cmake_minimum_required(VERSION 3.25)
project(A2_JashNguyen)

set(CMAKE_CXX_STANDARD 17)

add_executable(A2_JashNguyen main.cpp Company.cpp Bronze.cpp Bronze.h Silver.cpp Silver.h Gold.cpp Gold.h Risk.cpp Player.cpp GameDefault.cpp GameDefault.h GameAdvanced.cpp GameAdvanced.h workhorse.h workHorse.cpp)
